--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "babel src -d dist",
     "postbuild": "git add . --all",
     "test": "mocha",
-    "start": "mocha --watch --reporter min"
+    "start": "mocha --watch --reporter min",
+    "lint": "eslint src test"
   },
   "pre-commit": [
     "build",
+    "lint",
     "test"
   ],
   "repository": {
