--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   "dependencies": {
     "lodash": "4.13.1",
     "redux": "3.5.2",
-    "redux-loop": "2.1.1"
+    "redux-loop": "2.1.1",
+    "xr": "0.2.0"
   },
   "devDependencies": {
     "babel-cli": "6.10.1",
