--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
     "eslint": "2.12.0",
-    "eslint-config-permissible": "1.0.2",
+    "eslint-config-permissible": "1.0.3",
     "eslint-plugin-import": "1.8.1",
     "eslint-plugin-jsx-a11y": "1.4.2",
     "eslint-plugin-react": "5.1.1",
     "expect": "1.20.1",
+    "immutable": "3.8.1",
     "mocha": "2.5.3",
     "mocha-clean": "1.0.0",
     "pre-commit": "1.1.3"
