--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "babel src -d dist",
+    "build": "set NODE_ENV=production&& webpack",
     "postbuild": "git add . --all",
-    "test": "mocha",
+    "pretest": "npm run build",
+    "test": "set NODE_ENV=production&& mocha",
     "start": "mocha --watch --reporter min",
     "lint": "eslint src test"
   },
   "pre-commit": [
-    "build",
     "lint",
     "test"
   ],
@@ -36,9 +36,10 @@
     "xr": "0.2.0"
   },
   "devDependencies": {
-    "babel-cli": "6.10.1",
     "babel-core": "6.9.1",
     "babel-eslint": "6.0.4",
+    "babel-loader": "6.2.4",
+    "babel-plugin-lodash": "3.2.0",
     "babel-plugin-transform-object-rest-spread": "6.8.0",
     "babel-preset-es2015": "6.9.0",
     "babel-preset-stage-0": "6.5.0",
@@ -49,8 +50,10 @@
     "eslint-plugin-react": "5.1.1",
     "expect": "1.20.1",
     "immutable": "3.8.1",
+    "lodash-webpack-plugin": "0.9.2",
     "mocha": "2.5.3",
     "mocha-clean": "1.0.0",
-    "pre-commit": "1.1.3"
+    "pre-commit": "1.1.3",
+    "webpack": "1.13.1"
   }
 }
